test/types/range/vass/range-follower-multi.good
 100  
 100  N = 0  M = 0
 101  
 101  it * it
 102  
 102  it * r
 103  
 103  it * d1
 104  
 104  r * it
 105  
 105  r * r
 106  
 106  r * d1
 107  
 107  d1 * it
 108  
 108  d1 * r
 109  
 109  d1 * d1
 110  
 110  d2 * d2
 200  
 200  N = 4  M = 4
 201  
 201  (1, 1)
 201  (2, 2)
 201  (3, 3)
 201  (4, 4)
 201  it * it
 202  
 202  (1, 1)
 202  (2, 2)
 202  (3, 3)
 202  (4, 4)
 202  it * r
 203  
 203  (1, 1)
 203  (2, 2)
 203  (3, 3)
 203  (4, 4)
 203  it * d1
 204  
 204  (1, 1)
 204  (2, 2)
 204  (3, 3)
 204  (4, 4)
 204  r * it
 205  
 205  (1, 1)
 205  (2, 2)
 205  (3, 3)
 205  (4, 4)
 205  r * r
 206  
 206  (1, 1)
 206  (2, 2)
 206  (3, 3)
 206  (4, 4)
 206  r * d1
 207  
 207  (1, 1)
 207  (2, 2)
 207  (3, 3)
 207  (4, 4)
 207  d1 * it
 208  
 208  (1, 1)
 208  (2, 2)
 208  (3, 3)
 208  (4, 4)
 208  d1 * r
 209  
 209  (1, 1)
 209  (2, 2)
 209  (3, 3)
 209  (4, 4)
 209  d1 * d1
 210  
 210  ((1, 1), (1, 1))
 210  ((1, 2), (1, 2))
 210  ((1, 3), (1, 3))
 210  ((1, 4), (1, 4))
 210  ((2, 1), (2, 1))
 210  ((2, 2), (2, 2))
 210  ((2, 3), (2, 3))
 210  ((2, 4), (2, 4))
 210  d2 * d2
 300  
 300  N = 0  M = 4
 301  
 301  it * it
 302  
 302  it * r
 303  
 303  it * d1
 304  
 304  r * it
 305  
 305  r * r
 306  
 306  r * d1
 307  
 307  d1 * it
 308  
 308  d1 * r
 309  
 309  d1 * d1
 310  
 310  d2 * d2
 400  
 400  N = 4  M = 0
 401  
 401  (1, 1)
 401  (2, 2)
 401  (3, 3)
 401  (4, 4)
 401  it * it
 402  it * r
range-follower-multi.chpl:66: error: halt reached - size mismatch in zippered iteration
